--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "cookie": "^1.0.2",
+    "docxtemplater": "^3.61.0",
     "firebase": "^11.6.0",
     "next": "15.2.4",
+    "nodemailer": "^6.10.0",
+    "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
