--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemailer": "^6.10.0",
     "pizzip": "^3.1.8",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
