--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "cookie": "^1.0.2",
+    "docx-templates": "^4.14.1",
     "docxtemplater": "^3.61.0",
     "firebase": "^11.6.0",
+    "libreoffice-convert": "^1.6.1",
     "next": "15.2.4",
     "nodemailer": "^6.10.0",
+    "pdf-lib": "^1.17.1",
     "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
