--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docx-templates": "^4.14.1",
     "docxtemplater": "^3.61.0",
     "firebase": "^11.6.0",
+    "fs": "^0.0.1-security",
     "libreoffice-convert": "^1.6.1",
     "next": "15.2.4",
     "nodemailer": "^6.10.0",
